--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -73,7 +73,7 @@ console.log(navLinks);
                 <a href="https://www.facebook.com/share/bntEZ9SxVXobTbHY/?mibextid=LQQJ4d" class="cs-social-link">
                   <img
                     class="cs-social-icon"
-                    src="/src/svg/facebook.svg"
+                    src="/svg/facebook.svg"
                     alt="facebook logo"
                     width="24"
                     height="24"
