Your commit message here

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -17,7 +17,7 @@ import Footer from "../layouts/Footer.astro";
     <link rel="Contact Us" href="/src/pages/contactus.astro" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="generator" content="{Astro.generator}" />
-    <title>Astro</title>
+    <title>Shubha Sandharbh</title>
   </head>
 
   <body>
