--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,11 +1,10 @@
 ---
-import Navbar from "../components/Navbar.astro";
 import Banner from "../components/Banner.astro";
 import Content from "../components/Content.astro";
 import Footer from "../layouts/Footer.astro";
 ---
 
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -13,9 +12,7 @@ import Footer from "../layouts/Footer.astro";
     <title>About Us</title>
   </head>
   <body>
-    <Navbar />
     <Banner title="About Us" />
-    <!-- Pass the title as a prop here -->
     <Content />
     <Footer />
   </body>
