--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -85,11 +85,12 @@ console.log(navLinks);
                       decoding="async"
                     />
                   </a>
-<<<<<<< HEAD
-                  <a
-                    href="https://www.instagram.com/shubha_sandharbh/"
-                    class="cs-social-link"
-                  >
+                  <Fragment>
+  <a
+    href="https://www.instagram.com/shubha_sandharbh/"
+    class="cs-social-link"
+  >
+</Fragment>
                     <img
                       class="cs-social-icon"
                       src="/src/svg/instagram.svg"
