--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,5 @@
 ---
+import Navbar from "../components/Navbar.astro";
 import Hero from "../layouts/Hero.astro";
 import Services from "../components/Services.astro";
 import Gallery from "../components/Gallery.astro";
@@ -20,6 +21,7 @@ import Footer from "../layouts/Footer.astro";
   </head>
 
   <body>
+    <Navbar />
     <Hero />
     <Services />
     <Gallery />
