fixed path issue

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -10,7 +10,7 @@ import { navLinks } from "../data/navData.json";
       href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="/public/favicon.png" type="image/svg+xml" />
+    <link rel="icon" href="../public/favicon.png" type="image/svg+xml" />
   </head>
   <body>
     <header id="cs-navigation">
@@ -18,7 +18,7 @@ import { navLinks } from "../data/navData.json";
         <!-- Nav Logo -->
         <a href="/" class="cs-logo" aria-label="back to home">
           <img
-            src="/public/svg/cropped dark logo.svg"
+            src="../public/svg/cropped dark logo.svg"
             alt="logo"
             width="100"
             height="100"
@@ -62,7 +62,7 @@ import { navLinks } from "../data/navData.json";
                 <a href="tel:9606255549" class="cs-phone">
                   <img
                     class="cs-phone-icon"
-                    src="/public/svg/phone.svg"
+                    src="../public/svg/phone.svg"
                     alt="phone icon"
                     width="24"
                     height="24"
@@ -76,7 +76,7 @@ import { navLinks } from "../data/navData.json";
                     class="cs-social-link"
                   >
                     <img
-                      src="/public/svg/facebook.svg"
+                      src="../public/svg/facebook.svg"
                       alt="facebook"
                       width="24"
                       height="24"
@@ -87,7 +87,7 @@ import { navLinks } from "../data/navData.json";
                     class="cs-social-link"
                   >
                     <img
-                      src="/public/svg/instagram.svg"
+                      src="../public/svg/instagram.svg"
                       alt="instagram"
                       width="24"
                       height="24"
@@ -95,7 +95,7 @@ import { navLinks } from "../data/navData.json";
                   </a>
                   <a href="https://wa.me/919606255549" class="cs-social-link">
                     <img
-                      src="/public/svg/whatsapp.svg"
+                      src="../public/svg/whatsapp.svg"
                       alt="whatsapp"
                       width="24"
                       height="24"
@@ -103,7 +103,7 @@ import { navLinks } from "../data/navData.json";
                   </a>
                   <a href="#" class="cs-social-link">
                     <img
-                      src="/public/svg/youtube.svg"
+                      src="../public/svg/youtube.svg"
                       alt="youtube"
                       width="24"
                       height="24"
